unpackaged/main/default/objects/Contact/fields/LinkedIn_Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Manual_Entry__c</fullName>
    <description>LinkedIn Profile URL of the Contact.</description>
    <inlineHelpText>LinkedIn Profile URL of the Contact.</inlineHelpText>
    <label>LinkedIn (Person)</label>
    <type>Url</type>
</CustomField>