unpackaged/main/default/objects/Contact/fields/Max_Role_At_All_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Max_Role_At_All_Orgs__c</fullName>
    <description>NOT ACTIVE

Rollup of the frequent role found on related Retool User records for all orgs.
- Synced every 24 hours
- Retool Org Subscription Type == &#39;Committed&#39;
- Excludes churned committed customers: Account Status (Committed) != &#39;Former Customer&#39;
- Excludes Retool Users that haven&#39;t `logged in` in the last 90 days

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Rollup of the frequent role found on related Retool User records for all orgs.</inlineHelpText>
    <label>Max Role At All Orgs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Max_Role</valueSetName>
    </valueSet>
</CustomField>