unpackaged/main/default/objects/Contact/fields/Meeting_Page_Source__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Page_Source__c</fullName>
    <description>Source of the most recent Demo Request, populated by the URL parameter details.

External Systems Utilization: Chili Piper; Hubspot</description>
    <inlineHelpText>Source of the most recent Demo Request, populated by the URL parameter details.</inlineHelpText>
    <label>Meeting Page Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>