unpackaged/main/default/objects/Contact/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <description>Meeting Type populated from the most recent meeting booked through Chili Piper.</description>
    <inlineHelpText>Meeting Type populated from the most recent meeting booked through Chili Piper.</inlineHelpText>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>