unpackaged/main/default/objects/Contact/fields/MK_Customer_Fit__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit__c</fullName>
    <description>MadKudu Customer Fit scoring. 
3 stars: Very good, 2 stars: good, 1 star: medium, 1 cross: low 
Predicts if this contact looks like a potential customer based on the analysis of past customers and their firmo, demo, techno... enrichment</description>
    <formula>IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;,&quot;&quot;,0,0) +
CASE(MK_Customer_Fit_Segment__c,
&#39;very good&#39;,
IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) +
IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) +
IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20),
&#39;good&#39;,
IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) +
IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20),
&#39;medium&#39;,
IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20),
&#39;low&#39;,
IMAGE(&quot;https://cdn.madkudu.com/images/cross.png&quot;, &quot;Cross&quot;, 20, 20),
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Predicts if this contact looks like a potential customer based on the analysis of past customers and their firmo, demo, techno... enrichment. 
3 stars: Very good, 2 stars: good, 1 star: medium, 1 cross: low</inlineHelpText>
    <label>MK Customer Fit</label>
    <type>Text</type>
</CustomField>