unpackaged/main/default/objects/Contact/fields/MK_Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade__c</fullName>
    <description>Combination of the MK Customer Fit score and the MK Lead Engagement score.
Range from A to E. Change configuration on MadKudu&#39;s platform app.madkudu.com</description>
    <formula>IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;,&quot;&quot;,0,0)
+CASE(MK_Lead_Grade_Segment__c,
&#39;A&#39;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_a_s.png&quot;, &quot;A&quot;, 20, 20),
&#39;B&#39;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_b_s.png&quot;, &quot;B&quot;, 20, 20),
&#39;C&#39;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_c_s.png&quot;, &quot;C&quot;, 20, 20),
&#39;D&#39;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_d_s.png&quot;, &quot;D&quot;, 20, 20),
&#39;E&#39;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_e_s.png&quot;, &quot;E&quot;, 20, 20),
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Leads with a Grade A are your best leads. 
Possible values: A, B, C, D, E. Combination of the MK Customer Fit score and the MK Lead Engagement score.</inlineHelpText>
    <label>MK Lead Grade</label>
    <type>Text</type>
</CustomField>