unpackaged/main/default/objects/Contact/fields/Most_Recent_Event_Webinar_Registration__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Event_Webinar_Registration__c</fullName>
    <description>Date of the most recent event/webinar registration.</description>
    <inlineHelpText>Date of the most recent event/webinar registration.</inlineHelpText>
    <label>Most Recent Event/Webinar Registration</label>
    <type>DateTime</type>
</CustomField>