unpackaged/main/default/objects/Contact/fields/Most_Recent_Retool_Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Retool_Sign_Up_Date__c</fullName>
    <description>Most recent Retool signup date, calculated from the related retool users.</description>
    <inlineHelpText>Most recent Retool signup date, calculated from the related retool users.</inlineHelpText>
    <label>zOLDMost Recent Retool Sign Up Date</label>
    <type>Date</type>
</CustomField>