unpackaged/main/default/objects/Contact/fields/Most_Recent_Retool_Signup_At__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Retool_Signup_At__c</fullName>
    <description>Most recent Retool signup timestamp, calculated from the related retool users.</description>
    <inlineHelpText>Most recent Retool signup timestamp, calculated from the related retool users.</inlineHelpText>
    <label>Most Recent Retool Signup At</label>
    <type>DateTime</type>
</CustomField>