unpackaged/main/default/objects/Contact/fields/Needs_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Contact record needs to be enriched for routing.

External Systems Utilization: ZoomInfo; LeadGenius</description>
    <inlineHelpText>Indicates whether the Contact record needs to be enriched for routing.</inlineHelpText>
    <label>Needs Enrichment?</label>
    <type>Checkbox</type>
</CustomField>