unpackaged/main/default/objects/Contact/fields/No_Show_CP__c.field-meta.xml
<CustomField>
    <fullName>No_Show_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if the most recent Chili Piper meeting was flagged as a `No Show`.

External Systems Utilization: Chili Piper</description>
    <inlineHelpText>TRUE if the most recent Chili Piper meeting was flagged as a `No Show`.</inlineHelpText>
    <label>No Show?</label>
    <type>Checkbox</type>
</CustomField>