unpackaged/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Long Text Area field used to populate prospect `Wants to cover` notes from our Inbound demo request form.

External Systems Utilization: Chili Piper; Hubspot</description>
    <inlineHelpText>Long Text Area field used to populate prospect `Wants to cover` notes from our Inbound demo request form.</inlineHelpText>
    <label>Wants to cover</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>