unpackaged/main/default/objects/Contact/fields/Open_Committed_Opporunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Committed_Opporunities__c</fullName>
    <description>Updated via Polytomic Contact Status sync.
Used to trigger updates to Contact Status when there are changes to the number of open Opportunities on the related Account.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Updated via Polytomic Contact Status sync..
Used to trigger updates to Contact Status when there are changes to the number of open Opportunities on the related Account.</inlineHelpText>
    <label># Open Committed Opporunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>