unpackaged/main/default/objects/Contact/fields/Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ops_Notes__c</fullName>
    <description>Place for system stamped notes, or bulk upload details for RevOps</description>
    <label>Ops Notes</label>
    <type>TextArea</type>
</CustomField>