unpackaged/main/default/objects/Contact/fields/Opt_Out_Marketing_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Marketing_Date__c</fullName>
    <description>Date when the Contact opted out of Marketing communication.</description>
    <inlineHelpText>Date when the Contact opted out of Marketing communication.</inlineHelpText>
    <label>Opt Out (Marketing) Date</label>
    <type>Date</type>
</CustomField>