unpackaged/main/default/objects/Contact/fields/Opt_Out_Product_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Product_Date__c</fullName>
    <description>Date when the Contact opted out of Product communication.</description>
    <inlineHelpText>Date when the Contact opted out of Product communication.</inlineHelpText>
    <label>Opt Out (Product) Date</label>
    <type>Date</type>
</CustomField>