unpackaged/main/default/objects/Contact/fields/Opt_Out_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Sales_Date__c</fullName>
    <description>Date when the Contact opted out of Sales communication.</description>
    <inlineHelpText>Date when the Contact opted out of Sales communication.</inlineHelpText>
    <label>Opt Out (Sales) Date</label>
    <type>Date</type>
</CustomField>