unpackaged/main/default/objects/Contact/fields/Outreach_Actively_Being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Actively_Being_Sequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE if the Contact is currently active in an Outreach sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Checked TRUE if the Contact is currently active in an Outreach sequence.</inlineHelpText>
    <label>Actively Being Sequenced</label>
    <type>Checkbox</type>
</CustomField>