unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_ID__c</fullName>
    <description>ID of the currently active, or most recently active Outreach Sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>ID of the currently active, or most recently active Outreach Sequence.</inlineHelpText>
    <label>Current Sequence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>