unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Name__c</fullName>
    <description>Name of the currently active, or most recently active Outreach Sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Name of the currently active, or most recently active Outreach Sequence.</inlineHelpText>
    <label>Current Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>