unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Status__c</fullName>
    <description>Status of the currently active, or most recently active Outreach Sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Status of the currently active, or most recently active Outreach Sequence.</inlineHelpText>
    <label>Current Sequence Status</label>
    <type>TextArea</type>
</CustomField>