unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
    <description>Step number of the currently active, or most recently active Outreach Sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Step number of the currently active, or most recently active Outreach Sequence.</inlineHelpText>
    <label>Current Sequence Step Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>