unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
    <description>Step type of the currently active, or most recently active Outreach Sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Step type of the currently active, or most recently active Outreach Sequence.</inlineHelpText>
    <label>Current Sequence Step Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>