unpackaged/main/default/objects/Contact/fields/Outreach_Finished_Sequences__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Finished_Sequences__c</fullName>
    <description>All sequences that the prospect has completed via Outreach.

External Systems Utilization: Outreach</description>
    <inlineHelpText>All sequences that the prospect has completed via Outreach.</inlineHelpText>
    <label>Finished Sequences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>