unpackaged/main/default/objects/Contact/fields/Outreach_Initial_Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Initial_Sequence_ID__c</fullName>
    <description>Id of the initial Outreach Sequence.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Id of the initial Outreach Sequence.</inlineHelpText>
    <label>Initial Sequence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>