unpackaged/main/default/objects/Contact/fields/Outreach_Number_of_Active_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Number_of_Active_Tasks__c</fullName>
    <description>Number of currently active tasks from Outreach Sequences.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Number of currently active tasks from Outreach Sequences.</inlineHelpText>
    <label>Number of Active Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>