unpackaged/main/default/objects/Contact/fields/Outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Status__c</fullName>
    <description>Outreach Status indicative of current Outreach engagement.

External Systems Utilization: Outreach</description>
    <inlineHelpText>Outreach Status indicative of current Outreach engagement.</inlineHelpText>
    <label>Outreach Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold / Not Started</fullName>
                <default>true</default>
                <label>Cold / Not Started</label>
            </value>
            <value>
                <fullName>Added to Sequence</fullName>
            </value>
            <value>
                <fullName>Approaching</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>