unpackaged/main/default/objects/Contact/fields/Person_Grade__c.field-meta.xml
<CustomField>
    <fullName>Person_Grade__c</fullName>
    <description>Defines the demographic standing of the prospect with respect to how close or distant they are from Retool&#39;s target persona.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Defines the demographic standing of the prospect with respect to how close or distant they are from Retool&#39;s target persona.</inlineHelpText>
    <label>Person Grade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>