unpackaged/main/default/objects/Contact/fields/Person_Grade_Details__c.field-meta.xml
<CustomField>
    <fullName>Person_Grade_Details__c</fullName>
    <description>Defines the demographic score based on Moment Type.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Defines the demographic score based on Moment Type.</inlineHelpText>
    <label>Person Grade Details</label>
    <length>254</length>
    <type>Text</type>
</CustomField>