unpackaged/main/default/objects/Contact/fields/Person_Grade_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Person_Grade_Updated_At__c</fullName>
    <description>Date when the Person Grade is entered on the contact.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Date when the Person Grade is entered on the contact.</inlineHelpText>
    <label>Person Grade Updated At</label>
    <type>DateTime</type>
</CustomField>