unpackaged/main/default/objects/Contact/fields/Personalization_Notes__c.field-meta.xml
<CustomField>
    <fullName>Personalization_Notes__c</fullName>
    <description>Personalization notes used for sales prospecting.</description>
    <inlineHelpText>Personalization notes used for sales prospecting.</inlineHelpText>
    <label>Personalization Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>