unpackaged/main/default/objects/Contact/fields/pw_ccpro__MailingCounty__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__MailingCounty__c</fullName>
    <label>Mailing County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>