unpackaged/main/default/objects/Contact/fields/pw_ccpro__OtherCounty__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__OtherCounty__c</fullName>
    <label>Other County</label>
    <length>64</length>
    <type>Text</type>
</CustomField>