unpackaged/main/default/objects/Contact/fields/Reason_for_Demo__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Demo__c</fullName>
    <description>Reason for Demo captured by our Inbound Demo request form.

External Systems Utilization: Hubspot, Chili Piper</description>
    <inlineHelpText>Reason for Demo captured by our Inbound Demo request form.</inlineHelpText>
    <label>Reason for Demo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Explore Retool Enterprise</fullName>
            </value>
            <value>
                <fullName>Explore a Retool Use Case</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>