unpackaged/main/default/objects/Contact/fields/Regie_ai_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Regie_ai_Exclusion__c</fullName>
    <description>Used to exclude Contacts from being prospected by Regie.ai.

External Systems Utilization: Regie.ai</description>
    <formula>OR(
  NOT(ISBLANK(Most_Recent_Event_Webinar_Registration__c)),
  NOT(ISBLANK(Most_Recent_Retool_Signup_At__c)),
  NOT(ISBLANK(Current_Open_Journey__c)),
  NOT(ISPICKVAL(Owner.Subteam__c, &quot;BDR&quot;)),
  Account.Regie_ai_Exclusion__c = TRUE
)</formula>
    <inlineHelpText>Used to exclude Contacts from being prospected by Regie.ai.</inlineHelpText>
    <label>Regie.ai Exclusion?</label>
    <type>Checkbox</type>
</CustomField>